# invoicing

./: .gitignore  requirements.txt
backend/: pyproject.toml
backend/analytics/: urls.py  utils.py  views.py
backend/backend/: pagination.py  settings.py  urls.py
backend/clients/: models.py  serializers.py  views.py
backend/clients/migrations/: 0001_initial.py  0002_initial.py
backend/keys/: private.pem  public.pem
backend/sales/: admin.py  filters.py  manager.py  models.py  serializers.py  urls.py  views.py
backend/sales/migrations/: 0001_initial.py
backend/users/: admin.py  custom_services.py  decorators.py  models.py  serializers.py  urls.py  views.py
backend/users/migrations/: 0001_initial.py
backend/utils/: common.py  pdf_generator.py
